<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>The teleop package</description>
  <maintainer email="marcintrosh@todo.todo">marcintrosh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>
  <depend>vesc_access</depend>
  <depend>driver_access</depend>

</package>
