<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>The teleop package</description>
  <maintainer email="jacob.huesman@ndsu.edu">jacob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gmock</depend>
  <depend>vesc_access</depend>
  <depend>localization_lib</depend>
  <depend>joy</depend>
  <depend>dig_control</depend>
</package>
