<?xml version="1.0"?>
<package format="2">
  <name>waypoint_control</name>
  <version>0.0.0</version>
  <description>The waypoint control package</description>
  <maintainer email="jacob.huesman@ndsu.edu">jacob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>vesc_access</depend>
  <depend>navigation_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>utilities</depend>
</package>
