<?xml version="1.0"?>
<package format="2">
  <name>tracker_gui</name>
  <version>0.0.0</version>
  <description>The tracker_gui package</description>
  <maintainer email="jacob.huesman@ndsu.edu">jacob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tracker</depend>
</package>
