<?xml version="1.0"?>
<package format="2">
  <name>driver_access</name>
  <version>0.0.0</version>
  <description>The driver_access package</description>

  <maintainer email="jacob.huesman@ndsu.edu">Jacob Huesman</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>vrep_msgs</depend>

  <export></export>
</package>
